crates/ty_python_semantic/resources/mdtest/snapshots/annotations.md_-_Assignment_with_anno…_-_PEP-604_in_non-type-…_-_Earlier_versions_(f2859c9800f37c7).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---

---
mdtest name: annotations.md - Assignment with annotations - PEP-604 in non-type-expression context - Earlier versions
mdtest path: crates/ty_python_semantic/resources/mdtest/assignment/annotations.md
---

# Python source files

## mdtest_snippet.py

```
1 | # error: [unsupported-operator]
2 | IntOrStr = int | str
```

# Diagnostics

```
error[unsupported-operator]: Unsupported `|` operation
 --> src/mdtest_snippet.py:2:12
  |
2 | IntOrStr = int | str
  |            ---^^^---
  |            |     |
  |            |     Has type `<class 'str'>`
  |            Has type `<class 'int'>`
  |
info: PEP 604 `|` unions are only available on Python 3.10+ unless they are quoted
info: Python 3.9 was assumed when resolving types because it was specified on the command line

```
